[gd_scene load_steps=2 format=3 uid="uid://card_ui_scene"]

[ext_resource type="Script" path="res://card_ui.gd" id="1"]

[node name="CardUI" type="PanelContainer"]
custom_minimum_size = Vector2(120, 160)
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CostLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
text = "⚡2"
theme_override_font_sizes/font_size = 16

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TypeLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
text = "⚔️"
theme_override_font_sizes/font_size = 20

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Card Name"
theme_override_font_sizes/font_size = 14
autowrap_mode = 2

[node name="VSeparator" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Card description goes here"
theme_override_font_sizes/font_size = 11
autowrap_mode = 3
